Bing/examples/bad/16-break-continue.bing
void main1() {
    
    int ilo = 1;
    {
        break;
    }

}


void main2() {
    continue;
}
void main() {
    main1();
    main2();
}